
cc_library(
	name = "variant",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_move//:move",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_functional//:functional",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_bind//:bind",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_math//:math",
		"@com_github_bazelboost_type_index//:type_index"
	],
)
